--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^9.1.0",
+    "marked-react": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-marked-renderer": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
